[tool.poetry]
name = "dev_api"
version = "0.1.0"
description = ""
authors = ["Rom"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
